# quotaline

./: .gitignore  Cargo.toml  README.md  burn.py  install.ps1  install.sh  statusline.py
.github/workflows/: ci.yml  release.yml
assets/: gen-demo.py
src/: bars.rs  burn.rs  fmt.rs  history.rs  install.rs  json.rs  localtime.rs  main.rs  memory.rs  report.rs  statusline.rs
tests/: smoke_test.py
